<resources>
    <string name="app_name">Github Users</string>
    <string name="user_image_description">Github user image.</string>
    <string name="loading_users">Loading users…</string>
    <string name="loading_user_profile">Loading user profile…</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="repositories">Repositories</string>
    <string name="error_loading_profile">Cannot load user profile information.</string>
    <string name="error_loading_users_swipe">Cannot load users list please swipe up to retry.</string>
    <string name="error_loading_users_retry">Cannot load users list please retry.</string>
    <string name="retry">Tap to retry.</string>
</resources>